# LC3-VM

./: CMakeLists.txt  README.md  lc3.h  lc3_core.c  main.c
src/: lc3_exec.c  lc3_instructions.c  lc3_traps.c
